--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Instructors/Index">Instructors</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Departments</a>
                         </li>
                     </ul>
                 </div>
